--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-geolocated": "^4.2.0",
     "react-hook-form": "^7.53.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.27.0",
