--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.27.0",
     "styled-components": "^6.1.13",
+    "uuid": "^11.0.3",
     "yup": "^1.4.0"
   },
   "devDependencies": {
